--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "cryptocurrencies": "^3.0.1",
     "feather-icons": "^4.7.0",
+    "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "moment-timezone": "^0.5.14",
+    "numeral": "^2.0.6",
+    "promise.prototype.finally": "^3.1.0",
     "raven-js": "^3.24.0",
+    "socketcluster-client": "^11.0.0",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
