--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
     ],
-    "modulePathIgnorePatterns": ["<rootDir>/externals"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/externals"
+    ]
   },
   "dependencies": {
     "@vue/test-utils": "^1.0.0-beta.13",
@@ -38,6 +40,7 @@
     "babel-jest": "^22.4.3",
     "bootstrap": "^4.0.0",
     "cryptocurrencies": "^3.0.1",
+    "eslint-plugin-jest": "^21.15.0",
     "feather-icons": "^4.7.0",
     "jest": "^22.4.3",
     "jest-serializer-vue": "^1.0.0",
