Changed Select component to not react on enter key

--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
     ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,vue}",
+      "!src/main.js",
+      "!src/router/index.js",
+      "!**/node_modules/**"
+    ],
+    "coverageDirectory": "<rootDir>/test/unit/coverage",
     "collectCoverage": true
   },
   "dependencies": {
