--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.18.0",
     "babel-jest": "^22.4.3",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "cryptocurrencies": "^3.0.1",
     "eslint-plugin-jest": "^21.15.0",
     "feather-icons": "^4.7.0",
@@ -58,6 +59,7 @@
     "raven-js": "^3.24.0",
     "socketcluster-client": "^11.0.0",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-cookie": "^1.1.4",
     "vue-jest": "^2.3.0",
     "vue-router": "^3.0.1",
