--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
+    "moxios": "^0.4.0",
     "nock": "^9.2.5",
     "numeral": "^2.0.6",
     "promise.prototype.finally": "^3.1.0",
@@ -66,7 +67,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
