--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch --notify",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "heroku-postbuild": "[ $NODE_ENV != test ] && npm run build || exit 0"
