--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest": "^22.4.3",
     "jest-serializer-vue": "^1.0.0",
     "jest-vue-preprocessor": "^1.4.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
