--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "axios": "^0.18.0",
     "babel-jest": "^22.4.3",
     "bootstrap": "^4.1.0",
-    "chart.js": "^2.7.2",
     "cryptocurrencies": "^3.0.1",
     "cryptocurrency-icons": "git+https://github.com/cjdowner/cryptocurrency-icons.git",
+    "date-fns": "^1.29.0",
     "eslint-plugin-jest": "^21.15.1",
     "feather-icons": "^4.7.0",
     "jest": "^22.4.3",
@@ -53,8 +53,6 @@
     "jest-vue-preprocessor": "^1.4.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
-    "moment": "^2.22.1",
-    "moment-timezone": "^0.5.16",
     "moxios": "^0.4.0",
     "nock": "^9.2.5",
     "numeral": "^2.0.6",
@@ -62,7 +60,6 @@
     "raven-js": "^3.24.2",
     "socketcluster-client": "^11.1.0",
     "vue": "^2.5.2",
-    "vue-chartjs": "^3.3.1",
     "vue-cookie": "^1.1.4",
     "vue-jest": "^2.5.0",
     "vue-router": "^3.0.1",
@@ -120,7 +117,7 @@
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.22.1",
     "webpack-merge": "^4.1.0"
