--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "numeral": "^2.0.6",
     "promise.prototype.finally": "^3.1.0",
     "raven-js": "^3.24.2",
+    "sass-resources-loader": "^1.3.3",
     "socketcluster-client": "^11.1.0",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
