--- a/package.json
+++ b/package.json
@@ -53,12 +53,10 @@
     "jest-vue-preprocessor": "^1.4.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.5",
-    "moxios": "^0.4.0",
     "nock": "^9.2.5",
     "numeral": "^2.0.6",
     "promise.prototype.finally": "^3.1.0",
     "raven-js": "^3.24.2",
-    "sass-resources-loader": "^1.3.3",
     "socketcluster-client": "^11.1.0",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
@@ -66,22 +64,21 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webfontloader": "^1.6.28",
-    "whatwg-fetch": "^2.0.4"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chalk": "^2.4.0",
+    "chalk": "^2.1.0",
+    "chromedriver": "^2.33.1",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.1.1",
-    "cross-env": "^5.0.5",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
@@ -90,7 +87,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -98,29 +95,31 @@
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^3.0.1",
+    "nightwatch": "^0.9.16",
     "node-sass": "^4.8.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
     "selenium-server": "^3.6.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-es": "^3.3.10",
+    "uglify-es": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.22.1",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
