Added login test

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^1.29.0",
     "eslint-plugin-jest": "^21.15.1",
     "feather-icons": "^4.7.0",
+    "flush-promises": "^1.0.0",
     "jest": "^22.4.3",
     "jest-serializer-vue": "^1.0.0",
     "jest-vue-preprocessor": "^1.4.0",
@@ -58,6 +59,7 @@
     "promise.prototype.finally": "^3.1.0",
     "raven-js": "^3.24.2",
     "socketcluster-client": "^11.1.0",
+    "vee-validate": "^2.0.8",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-jest": "^2.5.0",
