--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "e2e": "node test/e2e/runner.js",
+    "test:e2e": "testcafe chrome test/e2e/*.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
+    "test:e2e:login": "testcafe chrome test/e2e/login.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
+    "test:e2e:signup": "testcafe chrome test/e2e/signup.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
     "test": "jest --coverage",
     "test:watch": "jest --watch --notify",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
@@ -66,7 +69,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -112,6 +116,7 @@
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "testcafe": "^0.19.2",
     "uglify-es": "^3.1.3",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
