Added password reset flow and better e2e tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e": "testcafe chrome test/e2e/*.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
     "test:e2e:login": "testcafe chrome test/e2e/login.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
     "test:e2e:signup": "testcafe chrome test/e2e/signup.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
+    "test:e2e:forgotpassword": "testcafe chrome test/e2e/forgot-password.test.js --app \"npm run dev\" --app-init-delay 10000 -S -s screenshots",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
@@ -52,6 +53,7 @@
     "cryptocurrencies": "^3.0.1",
     "cryptocurrency-icons": "git+https://github.com/cjdowner/cryptocurrency-icons.git",
     "date-fns": "^1.29.0",
+    "dotenv": "^5.0.1",
     "eslint-plugin-jest": "^21.15.1",
     "feather-icons": "^4.7.0",
     "flush-promises": "^1.0.0",
