--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "moxios": "^0.4.0",
     "nightwatch": "^0.9.16",
     "node-sass": "^4.8.3",
     "opn": "^5.1.0",
