--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.18.0",
     "babel-jest": "^22.4.3",
     "bootstrap": "^4.1.0",
+    "chart.js": "^2.7.2",
     "cryptocurrency-icons": "git+https://github.com/cjdowner/cryptocurrency-icons.git",
     "date-fns": "^1.29.0",
     "dotenv": "^5.0.1",
@@ -69,6 +70,7 @@
     "socketcluster-client": "^11.1.0",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-cookie": "^1.1.4",
     "vue-jest": "^2.5.0",
     "vue-router": "^3.0.1",
