--- a/static/manifest.json
+++ b/static/manifest.json
@@ -39,7 +39,7 @@
       "density": "4.0"
      }
   ],
-  "start_url": "../index.html",
+  "start_url": "../",
   "display": "standalone",
   "background_color": "#2e63b1",
   "theme_color": "#2e63b1"
