--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue-jest": "^2.5.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
     "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
     "webpack-dev-server": "^3.1.4"
