--- a/static/manifest.json
+++ b/static/manifest.json
@@ -29,14 +29,23 @@
      {
       "src": "/static/icons/favicons/android-icon-144x144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "density": "3.0"
+      "type": "image/png"
      },
      {
       "src": "/static/icons/favicons/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "density": "4.0"
+     },
+     {
+      "src": "/static/icons/favicons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+     },
+     {
+      "src": "/static/icons/favicons/icon-1024x1024.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
      }
   ],
   "start_url": "../",
