--- a/static/manifest.json
+++ b/static/manifest.json
@@ -48,7 +48,7 @@
       "type": "image/png"
      }
   ],
-  "start_url": "../",
+  "start_url": "../?pwa=home",
   "display": "standalone",
   "background_color": "#2e63b1",
   "theme_color": "#2e63b1"
