--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "test": "yarn run test:unit",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "testcafe chrome tests/e2e/*.test.js -S -s screenshots",
     "test:e2e:login": "testcafe chrome tests/e2e/login.test.js -S -s screenshots",
