--- a/public/manifest.json
+++ b/public/manifest.json
@@ -48,7 +48,7 @@
       "type": "image/png"
      }
   ],
-  "start_url": "./",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#2e63b1",
   "theme_color": "#2e63b1"
