--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "testcafe": "^0.20.1",
+    "vue-cli-plugin-critical": "^1.1.0",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
