--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nock": "^9.2.6",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "socket.io-client": "^2.1.1",
     "testcafe": "^0.20.1",
     "vue-cli-plugin-critical": "^1.1.0",
     "vue-template-compiler": "^2.5.16"
